# example

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb
src/example/: __init__.py
tests/: test_example.py
