[tool.poetry]
name = "example"
version = "0.0.1"
description = "Esto es un paquete de prueba"
authors = ["Daniel Ruiz"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
django = "^4.0.0"
fastapi = "0.87.0"
optuna = "~3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
